test/testdata/syntax_errors/invalid_utf8.lox
// error: invalid UTF-8 byte 0xc2
// error: invalid UTF-8 byte 0xff
print Âÿ2;
